# gegl.wasm

./: .gitignore  README.md  build-wasm.sh  deps-wasm.txt  devenv.nix  meson-wasm.build  meson.build  meson_options.txt  package-lock.json  package.json  rollup.config.js  test.js
.github/workflows/: build.yml
cross/: emscripten.txt
docs/: api.md  getting-started.md  migration-from-desktop.md  performance.md
examples/: basic-demo.html  batch-processor-worker.js  batch-processor.html
examples/frameworks/: README.md
examples/frameworks/angular/: README.md  angular.json  package.json
examples/frameworks/angular/src/: index.html  styles.css
examples/frameworks/angular/src/app/: app.component.html  app.component.ts
examples/frameworks/react/: README.md  package.json
examples/frameworks/react/public/: index.html
examples/frameworks/react/src/: App.css  App.js
examples/frameworks/vanilla-js/: README.md  index.html
examples/frameworks/vue/: README.md  index.html  package.json
examples/frameworks/vue/src/: App.vue
examples/image-editor/: README.md  package-lock.json  package.json
examples/image-editor/public/: gegl-worker.js  index.html
examples/image-editor/src/: App.js
examples/image-editor/src/components/: Canvas.js  LayerPanel.js  ToolPanel.js
examples/image-editor/src/utils/: Layer.js  Layer.test.js  compositing.js
gegl/: gegl-cpuaccel.c  gegl-cpuaccel.h  gegl-init.c  gegl-op.h  gegl.h  meson.build  wasm-config.h  wasm-io.c  wasm-io.h  wasm-memory.c  wasm-memory.h  wasm-progressive.c  wasm-progressive.h  wasm-threading.c  wasm-threading.h
gegl/buffer/: gegl-algorithms.h  gegl-buffer.c  gegl-sampler-cubic.c  gegl-sampler-linear.c  gegl-tile-alloc.c  gegl-tile-backend-ram.c  gegl-tile-backend-ram.h  gegl-variants.inc  meson.build
gegl/graph/: gegl-node.c
gegl/operation/: gegl-operation.c  gegl-operation.h  gegl-operations.c
gegl/process/: gegl-processor.c
js/: README-canvas-utils.md  README-feature-detection.md  README-gegl-worker.md  README-memory-profiler.md  canvas-utils.js  feature-detection.js  gegl-bindings.cpp  gegl-worker.js  gegl-wrapper.js  gegl.d.ts  memory-profiler.js  meson.build  test-canvas-utils.js  test-feature-detection.js  test-gegl-worker.js  test-memory-profiler.js
libs/ctx/: ctx.h
operations/: meson.build
operations/common/: gegl-buffer-load-op.c  gegl-buffer-save-op.c  open-buffer.c  write-buffer.c
operations/core/: cast-space.c  convert-space.c  json.c  load.c
operations/transform/: transform-core.c
operations/wasm/: meson.build
operations/wasm-common/: box-blur-wasm.c  brightness-contrast-wasm.c  buffer-sink-wasm.c  buffer-source-wasm.c  color-adjust-wasm.c  gaussian-blur-wasm.c  invert-wasm.c  meson.build  posterize-wasm.c  saturation-wasm.c
tests/: README.md  run-browser-tests.js  test-runner.html
tests/wasm/: benchmark.js  test-buffer.js  test-integration.js  test-memory-leaks.js  test-operations.js  test-progressive.js
