# JavaScript bindings for WebAssembly
# This builds the Emscripten EMBIND bindings for GEGL

gegl_bindings = files('gegl-bindings.cpp')

# JavaScript utility files
js_utils = files(
  'memory-profiler.js',
  'test-memory-profiler.js',
  'README-memory-profiler.md'
)

# Add the bindings to the gegl_lib sources
gegl_sources += gegl_bindings